# bug-repro

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md
src/: main.rs
