[package]
name = "crosstest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.diesel]
version = "2"
default-features = false
features = ["postgres_backend", "chrono", "numeric"]

[dependencies.diesel-async]
version = "0.2"
features = ["postgres"]
